# MiniERP

./: README.md
lira-pos/: .gitignore  package-lock.json  package.json  tailwind.config.js
lira-pos/src/: App.tsx  index.css
lira-pos/src-tauri/: Cargo.toml  tauri.conf.json
lira-pos/src-tauri/capabilities/: default.json
lira-pos/src-tauri/src/: lib.rs  main.rs  posting.rs
lira-pos/src/components/: AppShell.tsx  BarcodeManager.tsx  NavLink.tsx  NetworkBadge.tsx  ProductPicker.tsx  SupplierPicker.tsx
lira-pos/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  SearchInput.tsx
lira-pos/src/db/: client.ts  migrate.ts  seed.ts  types.ts
lira-pos/src/db/migrations/: 001_initial.sql  002_barcodes.sql  003_demo_products.sql  004_uom.sql  005_purchases.sql  006_supplier_ledger.sql  007_sales_cogs_method.sql
lira-pos/src/db/repos/: barcodes.ts  exchangeRates.ts  movements.ts  products.ts  purchases.ts  sales.ts  supplierLedger.ts  suppliers.ts  uoms.ts  vatRates.ts
lira-pos/src/lib/: barcode.ts  dates.ts  ids.ts  money.ts  network.ts  purchaseMath.ts  saleMath.ts  uom.ts  vat.ts
lira-pos/src/pages/: ExchangeRate.tsx  Inventory.tsx  LocalReports.tsx  ManagerDashboard.tsx  PosRegister.tsx  Products.tsx  Purchases.tsx  SalesHistory.tsx  ShiftSummary.tsx  SupplierDetail.tsx  Suppliers.tsx  _Dev.tsx
lira-pos/src/state/: activeContext.ts  lowStockBadge.ts
